fixed video spacing issue

--- a/public/css/profile.scss
+++ b/public/css/profile.scss
@@ -26,11 +26,11 @@
       width: 100%;
       height: auto;
     }
-  }
+}
 
 #profileFeed {
   .presentWrapper {
-    margin: 0px auto 80px auto;
+    margin: 0px auto 60px auto;
     width: 480px;
     min-height: 500px;
     @media (max-width: $break-small) {
